# med

./: .gitignore  LOGO_PROMPT.md  Makefile  TAURI_PLAN.md  implementation-plan.md  markdown-editor.spec  med.spec  plan.md  pyproject.toml
src/markdown_editor/: __init__.py  __main__.py  app.py  main.py
src/med/: __init__.py  __main__.py  app.py  main.py  renderer.py
src/med/resources/: app.qss  app_dark.qss  preview.css
tests/: test_phase4.py  test_phase5.py
