[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med"
version = "0.1.0"
description = "med — a cross-platform, distraction-free Markdown editor with live preview"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "markdown-it-py>=3.0",
    "pygments>=2.17",
    "mistletoe>=1.3",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "ruff>=0.3",
]

[project.scripts]
med = "med.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
